Implemented ContentPage template. Started wallet saga.

--- a/src/components/Appbar/styles.less
+++ b/src/components/Appbar/styles.less
@@ -11,10 +11,9 @@
       flex-grow: 1;
       display: flex;
       justify-content: center;
-      margin: 0 @main-margin;
 
       .widthWrapper {
-        max-width: 1440px - @main-margin * 2;
+        max-width: 1432px;
         flex-grow: 1;
         width: 100%;
         display: flex;
