--- a/src/pages/ContentPages/styles.less
+++ b/src/pages/ContentPages/styles.less
@@ -9,14 +9,13 @@
   right: 0;
   display: flex;
   flex-direction: column;
-  //min-width: 900px;
   align-items: center;
   background-color: #EDEDED;
   justify-content: center;
   width: 100%;
 
   .scrollWrapper {
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -28,26 +27,17 @@
 
     .content {
       max-width: 1432px;
+      margin: @main-margin;
       width: 100%;
-      display: flex;
       flex-grow: 1;
       flex-shrink: 1;
       flex-basis: 100%;
-      align-items: flex-start;
 
-      .filterPane {
-        flex-grow: 1;
-        flex-shrink: 1;
-        flex-basis: 0;
-        margin: @main-margin - @scroll-margin-top @main-margin/2 @main-margin @main-margin;
-      }
-
-      .resultsPane {
-        flex-grow: 3;
-        flex-shrink: 1;
-        flex-basis: 0;
-        margin: @main-margin - @scroll-margin-top 0 0 @main-margin/2;
-        min-height: ~"calc(100vh - 48px - 32px)";
+      .paper {
+        min-height: 100%;
+        margin-bottom: @main-margin;
+        padding: @main-margin;
+        box-sizing: border-box;
       }
     }
   }
