Implemented send money operation Added Table widget

--- a/src/pages/ContentPages/WalletPage/styles.less
+++ b/src/pages/ContentPages/WalletPage/styles.less
@@ -1,5 +1,16 @@
 @import '../../../theme/common.less';
 
-.container {
+.header {
+  display: flex;
+  align-items: center;
 
+  .spacer {
+    width: @main-margin;
+    flex-grow: 1;
+  }
+}
+
+.sendMoney {
+  margin-top: @main-margin;
+  display: flex;
 }
