--- a/src/pages/ContentPages/styles.less
+++ b/src/pages/ContentPages/styles.less
@@ -38,6 +38,21 @@
         margin-bottom: @main-margin;
         padding: @main-margin;
         box-sizing: border-box;
+        position: relative;
+
+        .loading {
+          position: absolute;
+          z-index: 2;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          background-color: rgba(255, 255, 255, 0.5);
+        }
+
+        .title {
+          margin-bottom: @main-margin / 2;
+        }
       }
     }
   }
