Implemented wallet info polling Added last transactions
Signed-off-by: Eugeny Gorshkov <jazzy.em@gmail.com>

--- a/src/components/Table/styles.less
+++ b/src/components/Table/styles.less
@@ -1,9 +1,13 @@
-.row {
-  &:hover {
-    background-color: rgba(0,0,0,0.05)
-  }
-}
+.container {
+  overflow-x: auto;
 
-.clickableRow {
-  cursor: pointer;
+  .row {
+    &:hover {
+      background-color: rgba(0,0,0,0.05)
+    }
+  }
+
+  .clickableRow {
+    cursor: pointer;
+  }
 }
